--- a/styles/styles.css
+++ b/styles/styles.css
@@ -762,7 +762,9 @@ p {
   color: white;
 }
 .repo-card img {
-        width: 100%; height: auto;
+    width: 100%;
+    height: 50px; /* set your desired height */
+    object-fit: contain;
 }
 
     .folder-list ul {
