--- a/styles/styles.css
+++ b/styles/styles.css
@@ -763,7 +763,7 @@ p {
 }
 .repo-card img {
     width: 100%;
-    height: 50px; /* set your desired height */
+    height: 150px;
     object-fit: contain;
 }
 
