--- a/styles/styles.css
+++ b/styles/styles.css
@@ -9,7 +9,7 @@ body {
     margin: 0;
 
     /* Background image */
-    background-image: url('mainimg.png');
+    background-image: url('mainimage.png');
     background-size: cover;      /* makes the image cover the viewport */
     background-position: center; /* centers the image */
     background-repeat: no-repeat;/* prevent tiling */
