--- a/styles/styles.css
+++ b/styles/styles.css
@@ -833,7 +833,7 @@ p {
   position: absolute;
   width: 0;
   height: 0;
-  filter: drop-shadow(0 0 1px black);
+  filter: drop-shadow(0 0 1px white);
   animation: pulse1 5s ease-in-out infinite;
   transition: color 0.4s ease;
 }
