--- a/styles/styles.css
+++ b/styles/styles.css
@@ -8,7 +8,7 @@ body {
     overflow-x: hidden; /* prevent horizontal scrollbar from cursor trail */
     margin: 0;
     /* Background image */
-    background-image: url('mainnn.png');
+    background-image: url('mainnn1.png');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
