--- a/styles/styles.css
+++ b/styles/styles.css
@@ -7,7 +7,7 @@ body {
     overflow-x: hidden; /* prevent horizontal scrollbar from cursor trail */
     margin: 0;
     /* Background image */
-    background-image: url('mainnn0.png');
+    background-image: url('main01.png');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
